@startuml

!define MyCustomSkin
skinparam class {
    BorderColor DarkSlateGray
    ArrowColor DarkSlateGray
    ArrowThickness 2
}


class QuestionOptionEntity {
- String id
- String parentQuestionId
- String childOptionId
- int childType
- int deleteFlag
- String createdBy
- Date creationDate
- String lastUpdatedBy
- Date lastUpdateDate
}
class QuestionnaireQuestionEntity {
- String id
- String questionnaireId
- String questionId
- int deleteFlag
- String createdBy
- Date creationDate
- String lastUpdatedBy
- Date lastUpdateDate
}
class OptionEntity {
- String id
- String content
- String createdBy
- Date creationDate
- String lastUpdatedBy
- Date lastUpdateDate
}
class QuestionnaireEntity {
- String id
- String projectId
- String questionnaireName
- String questionnaireDescription
- Integer surveyType
- Timestamp releaseTime
- Timestamp deadline
- String accessLink
- Integer deleteFlag
- String createdBy
- Date creationDate
- String lastUpdatedBy
- Date lastUpdateDate
- List<QuestionEntity> questions
+ boolean isQuestionnaireValid()
}
class QuestionEntity {
- String id
- int type
- String content
- int requiredFlag
- String createdBy
- Date creationDate
- String lastUpdatedBy
- Date lastUpdateDate
~ List<OptionEntity> options
~ List<QuestionEntity> questions
}

QuestionnaireEntity "1" --> "*" QuestionEntity : contains
QuestionEntity "1" --> "*" OptionEntity : has options
QuestionEntity "*" --> "*" QuestionEntity : has nested questions
QuestionEntity "*" --> "*" QuestionnaireQuestionEntity : related to
QuestionEntity "*" --> "*" QuestionOptionEntity : has options
QuestionnaireQuestionEntity "*" --> "*" QuestionnaireEntity : related to
QuestionOptionEntity "*" --> "*" OptionEntity : related to

@enduml